5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1585_1015.log
== TEST (2019-03-25 12:47:57) 
-- CODE:
num1 = int(input("numero 1")) 
num2 = int(input("numero 2")) 
num3 = int(input("numero 3")) 
print(max(num1,num2,num3))
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:47:57) 
-- CODE:
num1 = int(input("numero 1")) 
num2 = int(input("numero 2")) 
num3 = int(input("numero 3")) 
print(max(num1,num2,num3))
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:52:05) 
-- CODE:
na = int(input("numero a ")) 
nb = int(input("numero b ")) 
nc = int(input("numero c ")) 
vlmax = max(na,nb,nc)
vlmim = min(na,nb,nc)
vlint =(na+nb+nc)-(vlmax+vlmin)
print(vlmim)
print(vlint)
print(vlmax)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    vlint =(na+nb+nc)-(vlmax+vlmin)
NameError: name 'vlmin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:52:48) 
-- CODE:
na = int(input("numero a ")) 
nb = int(input("numero b ")) 
nc = int(input("numero c ")) 
vlmax = max(na,nb,nc)
vlmim = min(na,nb,nc)
vlint = (na+nb+nc)-(vlmax+vlmin)
print(vlmim)
print(vlint)
print(vlmax)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    vlint = (na+nb+nc)-(vlmax+vlmin)
NameError: name 'vlmin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:53:19) 
-- CODE:
na = int(input("numero a ")) 
nb = int(input("numero b ")) 
nc = int(input("numero c ")) 
vlmax = max(na,nb,nc)
vlmim = min(na,nb,nc)
vlint = (na+nb+nc)-(vlmax+vlmim)
print(vlmim)
print(vlint)
print(vlmax)
-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:53:19) 
-- CODE:
na = int(input("numero a ")) 
nb = int(input("numero b ")) 
nc = int(input("numero c ")) 
vlmax = max(na,nb,nc)
vlmim = min(na,nb,nc)
vlint = (na+nb+nc)-(vlmax+vlmim)
print(vlmim)
print(vlint)
print(vlmax)
-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 12:53:34) 
-- CODE:
na = int(input("numero a ")) 
nb = int(input("numero b ")) 
nc = int(input("numero c ")) 
vlmax = max(na,nb,nc)
vlmim = min(na,nb,nc)
vlint = (na+nb+nc)-(vlmax+vlmim)
print(vlmim)
print(vlint)
print(vlmax)
-- EXECUTION TIME:
0.137123
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
